feat: Add shipping and delivery functionality to SalesOrderController and SalesOrderService
- Implemented shipSalesOrder and deliverSalesOrder methods in SalesOrderController.
- Added corresponding service methods in SalesOrderService to handle shipping and delivery logic.
- Updated Shipment model to generate tracking numbers on creation.
- Enhanced CarrierDTO and CarrierRespDTO with Lombok annotations for easier object creation.
- Added new tests for ProductController and ProductServices to ensure proper functionality.
- Configured H2 in-memory database for testing and set up application-test.properties.
- Improved ProductDTO and ProductRespDTO with builder patterns for easier instantiation.

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
             <version>6.4.4</version>
@@ -94,6 +99,34 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- H2 Database for Testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit 5 Extended Support -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito for Mocking -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- AssertJ for Fluent Assertions -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
