feat: Integrate Swagger/OpenAPI for API documentation; enhance ProductController with annotations and add Swagger configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,19 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server
 server.port=8080
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.show-actuator=false
+springdoc.swagger-ui.use-root-path=false
+springdoc.swagger-ui.url=/v3/api-docs
+# Fix for scanning issues
+springdoc.cache.disabled=false
+
+# Logging
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.logitrack=DEBUG
