Add unit tests for PurchaseOrderController and SalesOrderService
- Implement comprehensive tests for PurchaseOrderController, covering create, retrieve, update, and delete operations.
- Add tests for handling various scenarios including empty lists and multiple purchase orders.
- Create unit tests for SalesOrderService, validating the creation, retrieval, updating, reserving, shipping, delivering, and canceling of sales orders.
- Ensure proper exception handling for non-existent orders and invalid states.
- Test interactions with repositories and mappers to verify correct behavior and data transformations.

--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,11 @@
         <sonar.coverage.exclusions>
             **/*DTO.*,
             **/mapper/*.*,
+            **/models/*.*,
+            **/ENUM/*.*,
             **/LogitrackApplication.*,
-            **/config/*.*
+            **/config/*.*,
+            **/Util/*.*
         </sonar.coverage.exclusions>
         </properties>
     <dependencies>
@@ -171,8 +174,11 @@
                     <excludes>
                         <exclude>**/*DTO.*</exclude>
                         <exclude>**/mapper/*.*</exclude>
+                        <exclude>**/models/*.*</exclude>
+                        <exclude>**/ENUM/*.*</exclude>
                         <exclude>**/LogitrackApplication.*</exclude>
                         <exclude>**/config/*.*</exclude>
+                        <exclude>**/Util/*.*</exclude>
                     </excludes>
                 </configuration>
                 </plugin>
