--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -18,7 +16,9 @@ services:
 
   # Jenkins CI/CD Controller
   jenkins:
-    image: jenkins/jenkins:lts-jdk17
+    build: 
+      context: .
+      dockerfile: Dockerfile.jenkins
     container_name: jenkins
     privileged: true
     user: root
