--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -23,7 +23,7 @@ services:
     privileged: true
     user: root
     ports:
-      - "8080:8080"
+      - "8087:8080"
       - "50000:50000"
     volumes:
       - jenkins_data:/var/jenkins_home
@@ -55,12 +55,52 @@ services:
     depends_on:
       - postgres
 
+  # Keycloak IAM
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.0
+    container_name: keycloak
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak-db:5432/keycloak_db
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_PORT: 8080
+      KC_HOSTNAME_URL: http://localhost:8082
+      KC_HOSTNAME_STRICT: "false"
+    ports:
+      - "8082:8080"
+    volumes:
+      - ./keycloak-config:/opt/keycloak/data/import
+    command: start-dev --import-realm
+    depends_on:
+      - keycloak-db
+    networks:
+      - cicd_net
+
+  # Keycloak Database
+  keycloak-db:
+    image: postgres:15
+    container_name: keycloak-db
+    environment:
+      POSTGRES_DB: keycloak_db
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5434:5432"
+    volumes:
+      - keycloak_data:/var/lib/postgresql/data
+    networks:
+      - cicd_net
+
 volumes:
   postgres_data:
   jenkins_data:
   sonarqube_data:
   sonarqube_extensions:
   sonarqube_logs:
+  keycloak_data:
 
 networks:
   cicd_net:
