feat: Integrate Keycloak for user authentication and authorization, update user registration process, and enhance security configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,24 @@ springdoc.cache.disabled=false
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.logitrack=DEBUG
+# Keycloak Configuration
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/logitrack/protocol/openid-connect/certs
+
+# OAuth2 Client Configuration
+spring.security.oauth2.client.registration.keycloak.client-id=logitrack-app
+spring.security.oauth2.client.registration.keycloak.client-secret=h8drYpO2HRCMeHYWU1EqnPEDnjiBdASB
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,roles
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8180/realms/logitrack
+spring.security.oauth2.client.provider.keycloak.authorization-uri=http://localhost:8180/realms/logitrack/protocol/openid-connect/auth
+spring.security.oauth2.client.provider.keycloak.token-uri=http://localhost:8180/realms/logitrack/protocol/openid-connect/token
+spring.security.oauth2.client.provider.keycloak.user-info-uri=http://localhost:8180/realms/logitrack/protocol/openid-connect/userinfo
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://localhost:8180/realms/logitrack/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+
+# Keycloak Admin API Configuration (for user registration)
+keycloak.admin.server-url=http://localhost:8180
+keycloak.admin.realm=logitrack
+
